opengl shapes declaration

--- a/AnimationsGraphicsMultimedia/app/src/main/res/values/strings.xml
+++ b/AnimationsGraphicsMultimedia/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="animation_buttonSecond">Second</string>
     <string name="animation_buttonCancel">Cancel</string>
     <string name="animation_buttonThird">Third</string>
+    <string name="main_buttonOpenGL">Open GL</string>
 </resources>
