--- a/EvaluacionFinal10/app/src/main/res/values/strings.xml
+++ b/EvaluacionFinal10/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="main_toolbar_title">Aeropuerto</string>
     <string name="mainOptions_temp">Consultar Temperatura</string>
+    <string name="main_markerCurrentLocation_title">Mi ubicación</string>
 </resources>
