safety assistant app with icon and official name

--- a/EvaluacionFinal11/app/src/main/res/values/strings.xml
+++ b/EvaluacionFinal11/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">EvaluacionFinal11</string>
+    <string name="app_name">Asistente de Seguridad</string>
     
     <string name="facebook_app_id">121236095178615</string>
     
